--- a/KPop Demon Hunters/Honmoon/Honmoon.vcxproj
+++ b/KPop Demon Hunters/Honmoon/Honmoon.vcxproj
@@ -17,7 +17,6 @@
       <Configuration>Release</Configuration>
       <Platform>x64</Platform>
     </ProjectConfiguration>
-
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
@@ -53,27 +52,24 @@
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
-
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
   </ImportGroup>
-  <ImportGroup Label="Shared" >
+  <ImportGroup Label="Shared">
   </ImportGroup>
-    <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-      <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    </ImportGroup>
-    <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-      <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    </ImportGroup>
-    <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-      <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    </ImportGroup>
-    <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-      <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-    </ImportGroup>
-
+  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
+  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
+  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
+  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+  </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -83,7 +79,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -97,7 +93,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -106,10 +102,11 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -120,14 +117,58 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-
-  <ItemGroup></ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\glad.c" />
+    <ClCompile Include="src\Headers\Camera.cpp" />
+    <ClCompile Include="src\Headers\imgui\imgui.cpp" />
+    <ClCompile Include="src\Headers\imgui\imgui_demo.cpp" />
+    <ClCompile Include="src\Headers\imgui\imgui_draw.cpp" />
+    <ClCompile Include="src\Headers\imgui\imgui_impl_glfw.cpp" />
+    <ClCompile Include="src\Headers\imgui\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="src\Headers\imgui\imgui_tables.cpp" />
+    <ClCompile Include="src\Headers\imgui\imgui_widgets.cpp" />
+    <ClCompile Include="src\Headers\imgui\implot.cpp" />
+    <ClCompile Include="src\Headers\imgui\implot_items.cpp" />
+    <ClCompile Include="src\Headers\IO\Input.cpp" />
+    <ClCompile Include="src\Headers\Mesh.cpp" />
+    <ClCompile Include="src\Headers\Model.cpp" />
+    <ClCompile Include="src\Headers\Shaders\Shader.cpp" />
+    <ClCompile Include="src\Headers\Textures\Textures.cpp" />
+    <ClCompile Include="src\main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\Shaders\Basic.frag" />
+    <None Include="src\Shaders\Basic.vert" />
+    <None Include="src\Shaders\Lines.frag" />
+    <None Include="src\Shaders\Lines.vert" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\Headers\Camera.hpp" />
+    <ClInclude Include="src\Headers\imgui\imconfig.h" />
+    <ClInclude Include="src\Headers\imgui\imgui.h" />
+    <ClInclude Include="src\Headers\imgui\imgui_impl_glfw.h" />
+    <ClInclude Include="src\Headers\imgui\imgui_impl_opengl3.h" />
+    <ClInclude Include="src\Headers\imgui\imgui_impl_opengl3_loader.h" />
+    <ClInclude Include="src\Headers\imgui\imgui_internal.h" />
+    <ClInclude Include="src\Headers\imgui\implot.h" />
+    <ClInclude Include="src\Headers\imgui\implot_internal.h" />
+    <ClInclude Include="src\Headers\imgui\imstb_rectpack.h" />
+    <ClInclude Include="src\Headers\imgui\imstb_textedit.h" />
+    <ClInclude Include="src\Headers\imgui\imstb_truetype.h" />
+    <ClInclude Include="src\Headers\IO\Input.hpp" />
+    <ClInclude Include="src\Headers\Mesh.hpp" />
+    <ClInclude Include="src\Headers\Model.hpp" />
+    <ClInclude Include="src\Headers\Shaders\Shader.hpp" />
+    <ClInclude Include="src\Headers\Textures\Textures.hpp" />
+    <ClInclude Include="src\Headers\Vertex\Vertex.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
